--- a/MatchGraph/src/Makefile
+++ b/MatchGraph/src/Makefile
@@ -4,11 +4,9 @@ TARGET		:= Main
 # Cuda source files (compiled with cudacc)
 CUFILES		:= CMEstimatorGPUSorted.cu GPUMatrix.cu
 # C/C++ source files (compiled with gcc / c++)
-<<<<<<< HEAD
-CCFILES		:= Main.cpp CPUImpl.cpp CPUComparator.cpp CMEstimatorCPU.cpp ImageHandler.cpp Tester.cpp
-=======
-CCFILES		:= Main.cpp CPUImpl.cpp CPUComparator.cpp CMEstimatorCPU.cpp ImageHandler.cpp Comparator.cpp
->>>>>>> refs/remotes/origin/master
+CCFILES		:= Main.cpp CPUImpl.cpp CPUComparator.cpp CMEstimatorCPU.cpp ImageHandler.cpp Tester.cpp Comparator.cpp
+
+
 
 #/graphics/projects/cuda/cula_r14/lib64
 
@@ -58,13 +56,11 @@ CC         := gcc
 LINK       := g++ -fPIC
 
 # Includes
-<<<<<<< HEAD
-INCLUDES  += -I$(CUDA_INSTALL_PATH)/include -I$(CUDA_SDK_DIR)/C/common/inc -I /lib/Eigen -I /graphics/projects/cuda/cula_r14/include
-=======
+
 PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/graphics/projects/opt/OpenCV-2.4.5/lib/pkgconfig
 export PKG_CONFIG_PATH
-INCLUDES  += -I$(CUDA_INSTALL_PATH)/include -I$(CUDA_SDK_DIR)/C/common/inc -I /lib/Eigen `pkg-config opencv --cflags`
->>>>>>> refs/remotes/origin/master
+INCLUDES  += -I$(CUDA_INSTALL_PATH)/include -I$(CUDA_SDK_DIR)/C/common/inc -I /lib/Eigen `pkg-config opencv --cflags` -I /graphics/projects/cuda/cula_r14/include
+
 CXXFLAGS += $(INCLUDES)
 CFLAGS += $(INCLUDES)
 NVCCFLAGS += $(INCLUDES)
@@ -89,11 +85,7 @@ CFLAGS += $(COMMONFLAGS)
 NVCCFLAGS += $(COMMONFLAGS)
 
 
-<<<<<<< HEAD
-LDFLAGS += -L$(CUDA_INSTALL_PATH)/lib64 -lcudart -L /graphics/projects/cuda/cula_r14/lib64
-=======
-LDFLAGS += -L$(CUDA_INSTALL_PATH)/lib64 -lcudart `pkg-config opencv --libs`
->>>>>>> refs/remotes/origin/master
+LDFLAGS += -L$(CUDA_INSTALL_PATH)/lib64 -lcudart -L /graphics/projects/cuda/cula_r14/lib64 `pkg-config opencv --libs`
 
 
 OBJS := $(patsubst %.cpp,%.o,$(CCFILES))
