Separated CPU/GPU initialization classes.

--- a/MatchGraph/src/Makefile
+++ b/MatchGraph/src/Makefile
@@ -2,7 +2,7 @@
 # Add source files here
 TARGET		:= Main
 # Cuda source files (compiled with cudacc)
-CUFILES		:= GPUMatrix.cu GPUSparse.cu CMEstimatorGPUSparse.cu Initializer.cu Helper.cu
+CUFILES		:= GPUMatrix.cu GPUSparse.cu CMEstimatorGPUSparse.cu InitializerGPU.cu Helper.cu
 # C/C++ source files (compiled with gcc / c++)
 CCFILES		:= Main.cpp CPUImpl.cpp GPUComparator.cpp CMEstimatorCPU.cpp Tester.cpp ImageHandler.cpp Comparator_CVGPU.cpp #Comparator_CPU.cpp
 
