--- a/MatchGraph/src/Makefile
+++ b/MatchGraph/src/Makefile
@@ -1,8 +1,9 @@
-
+# Insert your username here
+USER		:= 
 # Add source files here
 TARGET		:= Main
 # Cuda source files (compiled with cudacc)
-CUFILES		:= GPUMatrix.cu GPUSparse.cu CMEstimatorGPUSparse.cu InitializerGPU.cu Helper.cu
+CUFILES		:= GPUSparse.cu InitializerGPU.cu Helper.cu CMEstimatorGPUSparseMax.cu CMEstimatorGPUSparseOPT.cu
 # C/C++ source files (compiled with gcc / c++)
 CCFILES		:= Main.cpp CPUImpl.cpp GPUComparator.cpp CMEstimatorCPU.cpp Tester.cpp ImageHandler.cpp CPUComparator.cpp InitializerCPU.cpp Comparator_CVGPU.cpp Comparator_CPU.cpp
 
@@ -13,9 +14,9 @@ CCFILES		:= Main.cpp CPUImpl.cpp GPUComparator.cpp CMEstimatorCPU.cpp Tester.cpp
 #export LD_LIBRARY_PATH="/graphics/projects/cuda/toolkit_5.0/cuda/lib64/:$LD_LIBRARY_PATH"
 
 #### CULA ####
-#export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/schwarzk/cula_sparse/lib64/
-#export CULASPARSE_INC_PATH="/home/schwarzk/cula_sparse/include"
-#export CULASPARSE_LIB_PATH_64="/home/schwarzk/cula_sparse/lib64"
+#export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/$(USER)/cula_sparse/lib64/
+#export CULASPARSE_INC_PATH="/home/$(USER)/cula_sparse/include"
+#export CULASPARSE_LIB_PATH_64="/home/$(USER)/cula_sparse/lib64"
 
 #### OPEN CV ####
 #export PKG_CONFIG_PATH=/graphics/projects/opt/OpenCV-2.4.5_cuda/lib/pkgconfig
@@ -63,16 +64,14 @@ OSLOWER = $(shell uname -s 2>/dev/null | tr [:upper:] [:lower:])
 # Compilers
 NVCC       := $(CUDA_INSTALL_PATH)/bin/nvcc 
 CXX        := g++
-CC         := gcc
+CC         := gcc 
 LINK       := g++ -fPIC
 
 # Includes
 
 PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/graphics/projects/opt/OpenCV-2.4.5_cuda/lib/pkgconfig
 export PKG_CONFIG_PATH
-#export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/graphics/projects/opt/OpenCV-2.4.1_cuda/lib
-#export LD_LIBRARY_PATH
-INCLUDES  += -I$(CUDA_INSTALL_PATH)/include -I$(CUDA_SDK_DIR)/C/common/inc -I /graphics/projects/cuda/sdk_4.2/CUDALibraries/common/inc -I /lib/Eigen -I /graphics/projects/opt/OpenCV-2.4.5_cuda/include/opencv2/nonfree -I /graphics/projects/cuda/cula_r14/include -I /home/schwarzk/cula_sparse/include `pkg-config opencv --cflags` 
+INCLUDES  += -I$(CUDA_INSTALL_PATH)/include -I$(CUDA_SDK_DIR)/C/common/inc -I /graphics/projects/cuda/sdk_4.2/CUDALibraries/common/inc -I /lib/Eigen -I /graphics/projects/opt/OpenCV-2.4.5_cuda/include/opencv2/nonfree -I /graphics/projects/cuda/cula_r14/include -I /home/$(USER)/cula_sparse/include `pkg-config opencv --cflags` 
 
 CXXFLAGS += $(INCLUDES)
 CFLAGS += $(INCLUDES)
@@ -97,7 +96,7 @@ CXXFLAGS += $(COMMONFLAGS)
 CFLAGS += $(COMMONFLAGS)
 NVCCFLAGS += $(COMMONFLAGS)
 
-LDFLAGS += -L$(CUDA_INSTALL_PATH)/lib64 -lcula_sparse -lcublas -liomp5 -lpthread -lcolamd -lcusparse -lcudart -L /graphics/projects/cuda/cula_r14/lib64 -L /home/schwarzk/cula_sparse/lib64 `pkg-config opencv --libs`
+LDFLAGS += -L$(CUDA_INSTALL_PATH)/lib64 -lcula_sparse -lcublas -liomp5 -lpthread -lcolamd -lcusparse -lcudart -L /graphics/projects/cuda/cula_r14/lib64 -L /home/$(USER)/cula_sparse/lib64 `pkg-config opencv --libs`
 
 
 OBJS := $(patsubst %.cpp,%.o,$(CCFILES))
